Bug 1818287 - Disabled form-associated custom elements with delegateFocus should receive focus and keyboard events. r=edgar

Differential Revision: https://phabricator.services.mozilla.com/D171416